# composers-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  RELEASE.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: build.yml  ci.yml
docs/: CROSS-PLATFORM-GUIDE.md
scripts/: bump-version.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  pitch_class_set.rs  twelve_tone.rs
src-tauri/src/music/: classification.rs  forte.rs  interval_vector.rs  mod.rs  normal_form.rs  pitch_class.rs  prime_form.rs  random.rs  set.rs  subsets.rs  symmetry.rs  transformations.rs  twelve_tone.rs
src/components/common/: InfoCard.tsx  NoteButton.tsx  ToolHeader.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  ToolContainer.tsx
src/components/tools/pitch-class-set/: ClassificationPanel.tsx  ForteTablePanel.tsx  NoteInput.tsx  PitchClassSetTool.tsx  PropertiesPanel.tsx  RandomGeneratorPanel.tsx  SetHistoryPanel.tsx  TransformationPanel.tsx  index.ts
src/components/tools/twelve-tone/: MatrixDisplay.tsx  RowInput.tsx  TwelveToneTool.tsx  index.ts
src/hooks/: useKeyboardShortcuts.ts  usePitchClassSet.ts  useTwelveTone.ts
src/i18n/: en.json  index.ts  zh-CN.json
src/lib/: tauri.ts
src/stores/: pitchClassSetStore.ts  toolRegistry.ts  twelveToneStore.ts
src/types/: music.ts  tool.ts
tests/e2e/: pitch-class-set.spec.ts
